Updated from Publii

--- a/improving-efs-performance-part-2/index.html
+++ b/improving-efs-performance-part-2/index.html
@@ -133,7 +133,7 @@ sys     0m45.163s
                
                            (function () {
                                var d = document, s = d.createElement('script');
-                               s.src = 'https://disqus_zUZvOnbSnR.disqus.com/embed.js';
+                               s.src = 'https://devcloud-co-za.disqus.com/embed.js';
                                s.setAttribute('data-timestamp', +new Date());
                                (d.head || d.body).appendChild(s);
                            })();
