--- a/improving-efs-performance-part-1/index.html
+++ b/improving-efs-performance-part-1/index.html
@@ -17,7 +17,7 @@
                
                            (function () {
                                var d = document, s = d.createElement('script');
-                               s.src = 'https://disqus_zUZvOnbSnR.disqus.com/embed.js';
+                               s.src = 'https://devcloud-co-za.disqus.com/embed.js';
                                s.setAttribute('data-timestamp', +new Date());
                                (d.head || d.body).appendChild(s);
                            })();
