Updated from Publii

--- a/understanding-alb-least-outstanding-request/index.html
+++ b/understanding-alb-least-outstanding-request/index.html
@@ -85,6 +85,15 @@
                                                      </a>
                                        
                                                 </li>
+                                                    <li>
+                                                      <a
+                                                         href="https://devcloud.co.za/ecs-monitor-container-level-cpu-and-memory-using-docker-stats-and-cloudwatch-metrics/"
+                                                            target="_self"
+                                       >
+                                                         Container-level monitoring with Docker stats
+                                                     </a>
+                                       
+                                                </li>
                                            </ul>
                                  </li>
                                      <li class="active-parent has-submenu">
