Updated from Publii

--- a/understanding-alb-least-outstanding-request/index.html
+++ b/understanding-alb-least-outstanding-request/index.html
@@ -94,6 +94,15 @@
                                                      </a>
                                        
                                                 </li>
+                                                    <li>
+                                                      <a
+                                                         href="https://devcloud.co.za/how-to-store-ecs-stopped-task-details/"
+                                                            target="_self"
+                                       >
+                                                         Storing Stopped ECS Task Details
+                                                     </a>
+                                       
+                                                </li>
                                            </ul>
                                  </li>
                                      <li class="active-parent has-submenu">
